# mindboxTestTask

./: readme.md  setup.cfg
src/tasks/task1/: squareCounter.py  squareUnittest.py
src/tasks/task2/: product_relations.csv  products.csv  pysparkProducts.ipynb
