[metadata]
name = cvTask
version = 1.0.0
description = mindbox test task for CV
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = ~=3.10
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =

[options.packages.find]
where=src